--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -17,10 +17,7 @@ p{
     font-size: 30px;
 }
 .site-hero-content {
-    position:absolute;
-    /* left: 0; */
-    width: 100%;
-    /* height: 100%; */
+    height: 678px;
     text-align: center;
     color: #FFF;
     background:#f86700;
@@ -168,8 +165,13 @@ h1 {
 		background-position: 0% 50%;
 	}
 }
-
-
+.navbar-inverse .navbar-brand{
+	color:#FFF;
+}
+.my-panel{
+	
+	padding:0px;
+}
 
 /* Input Form Style End*/
 .container-fluid{
@@ -179,75 +181,6 @@ h1 {
 #brand_container{
 	padding-top:80px;
 	/* background-color:#f86700; */
-}
-/* Navbar color */
-.navbar-default {
-    background-color: #000;
-     border-color: #012421; 
-}
-/* Title */
-.navbar-default .navbar-brand {
-    color: #777;
-}
-.navbar-default .navbar-brand:hover,
-.navbar-default .navbar-brand:focus {
-    color: #5E5E5E;
-}
-/* Link */
-.navbar-default .navbar-nav > li > a {
-    color: #777;
-}
-.navbar-default .navbar-nav > li > a:hover,
-.navbar-default .navbar-nav > li > a:focus {
-    color: #333;
-}
-.navbar-default .navbar-nav > .active > a,
-.navbar-default .navbar-nav > .active > a:hover,
-.navbar-default .navbar-nav > .active > a:focus {
-    color: #555;
-    background-color: #E7E7E7;
-}
-.navbar-default .navbar-nav > .open > a,
-.navbar-default .navbar-nav > .open > a:hover,
-.navbar-default .navbar-nav > .open > a:focus {
-    color: #555;
-    background-color: #D5D5D5;
-}
-/* Caret */
-.navbar-default .navbar-nav > .dropdown > a .caret {
-    border-top-color: #777;
-    border-bottom-color: #777;
-}
-.navbar-default .navbar-nav > .dropdown > a:hover .caret,
-.navbar-default .navbar-nav > .dropdown > a:focus .caret {
-    border-top-color: #333;
-    border-bottom-color: #333;
-}
-.navbar-default .navbar-nav > .open > a .caret,
-.navbar-default .navbar-nav > .open > a:hover .caret,
-.navbar-default .navbar-nav > .open > a:focus .caret {
-    border-top-color: #555;
-    border-bottom-color: #555;
-}
-/* Mobile version */
-.navbar-default .navbar-toggle {
-    border-color: #DDD;
-}
-.navbar-default .navbar-toggle:hover,
-.navbar-default .navbar-toggle:focus {
-    background-color: #DDD;
-}
-.navbar-default .navbar-toggle .icon-bar {
-    background-color: #CCC;
-}
-@media (max-width: 767px) {
-    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
-        color: #777;
-    }
-    .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
-    .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-          color: #333;
-    }
 }
 @media (max-width: 767px) {
 		
@@ -293,3 +226,8 @@ div.table-responsive table>tbody>tr>td:nth-child(3) {
 	
 }
 }
+@media only screen and (max-width: 992px) {
+.display{
+	display:none;
+}
+} 
